# VAD

./: .gitignore  README.md
inference/: README.md
inference/pretrained_models/: CMakeLists.txt  Makefile  README.md
inference/pretrained_models/analysis/: analysis.txt
inference/pretrained_models/header_files/: evaluation.h  inference.h  proximityFunction.h  silero_vad.h  utils.h
inference/pretrained_models/inference/: data.txt  evaluation.cpp  inference.cpp  main.cpp  proximityFunction.cpp  utils.cpp
inference/pretrained_models/models/: PyanNet.cpp  best_dh.onnx
inference/pynote/: CMakeLists.txt
inference/pynote/complete_work/dataloader/: data_loader.cpp  data_loader_aug.cpp
inference/pynote/complete_work/model/: PyanNet.cpp  PyanNet_se.cpp
inference/pynote/complete_work/model/sincnet/: sincnet.cpp  sincnet.py
inference/pynote/complete_work/trainer/: trainer.cpp
inference/pynote/complete_work/utils_vad/: features.cpp  utils.cpp
inference/silero_vad/: Makefile  format.cpp  silero_vad.cpp  test  wav.h
inference/utils/: diarization.cpp  kaldi_data.cpp  kaldi_data.h
